Fix footer and make breadcrumbs work when squished

--- a/scss/site/_footer.scss
+++ b/scss/site/_footer.scss
@@ -52,6 +52,7 @@
 		display: none;
 		
 		@media #{$medium-up} {
+			display: block;
 			float: right;
 			@include rem('padding-left', 3);
 		}
